fix on modal overlaps and flexbox ordering system

--- a/app-design-v2/src/App.css
+++ b/app-design-v2/src/App.css
@@ -517,7 +517,46 @@ a:after {
 .z-10 {
   z-index: 10;
 }
+/* order */
+.order-1 {
+  order: 1;
+}
 
+.order-2 {
+  order: 2;
+}
+
+.order-3 {
+  order: 3;
+}
+
+.order-4 {
+  order: 4;
+}
+
+.order-5 {
+  order: 5;
+}
+
+.order-6 {
+  order: 6;
+}
+
+.order-7 {
+  order: 7;
+}
+
+.order-8 {
+  order: 8;
+}
+
+.order-9 {
+  order: 9;
+}
+
+.order-10 {
+  order: 10;
+}
 /* positions */
 .pos-abs {
   position: absolute;
